# faraday-tauri

./: package.json  pnpm-lock.yaml
src/: Terminal.tsx  app.tsx  bridge.ts  fsa.ts  index.css  main.tsx  tauriBridge.ts  wsBridge.ts
src-tauri/: Cargo.toml
src-tauri/faraday-core/: Cargo.toml
src-tauri/faraday-core/src/: ops.rs
src-tauri/faraday-server/: Cargo.toml
src-tauri/faraday-server/src/: main.rs
src-tauri/frdye/: Cargo.toml
src-tauri/frdye/src/: main.rs
src-tauri/src/: elevate.rs  lib.rs  main.rs  pty.rs  serve.rs
src/FileList/: ColumnsScroller.tsx  FileList.tsx
